--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ buildscript {
     ext.mockito = '2.17.0'
     ext.mockitoKotlin = "1.5.0"
     ext.koin = "1.0.0-beta-3"
+    ext.leakCanary = "1.5.4"
 }
 
 allprojects {
