--- a/data/build.gradle
+++ b/data/build.gradle
@@ -29,31 +29,26 @@ dependencies {
     api project(':device')
 
     //testing
-    testImplementation 'junit:junit:4.12'
+    testImplementation "junit:junit:$junit"
 
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
 
-    api "com.squareup.retrofit2:retrofit:$retrofit"
-    api "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
-    api "com.google.code.gson:gson:$gson"
-    api "com.squareup.okhttp3:logging-interceptor:$okHttp"
-    api "com.squareup.retrofit2:converter-gson:$retrofit"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
+    implementation "com.google.code.gson:gson:$gson"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okHttp"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit"
 
     //room database
-    api "android.arch.persistence.room:runtime:$room"
+    implementation "android.arch.persistence.room:runtime:$room"
     kapt "android.arch.persistence.room:compiler:$room"
-    api "android.arch.persistence.room:rxjava2:$room"
+    implementation "android.arch.persistence.room:rxjava2:$room"
 
     //di
     implementation "org.koin:koin-core:$koin"
     implementation "org.koin:koin-android:$koin"
-    implementation "org.koin:koin-android:$koin"
-    implementation "org.koin:koin-android-scope:$koin"
-    implementation "org.koin:koin-android-viewmodel:$koin"
-
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines"
 }
+
 kotlin {
     experimental {
         coroutines "enable"
