Added a Splash, Login and Register module and features, started work on connection to the Auth API part of the application
Structured the application cleaner, moved all the reusable resources to a new, Resources module

More work needed on Login and Register features, design improvements are crucial

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation project(':resources')
     implementation project(':core')
 
     //feature-specific modules
