Changed some base setup for NavigationRouter and ViewModels
Started working on Main feature and it's fragments/pages

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation project(':login')
     implementation project(':register')
     implementation project(':device')
+    implementation project(':main')
 
     //leaks
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakCanary"
