--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':device', ':login', ':core', ':splash', ':register', ':networking'
+include ':app', ':device', ':login', ':core', ':splash', ':register', ':networking', ':main'
