--- a/core/build.gradle
+++ b/core/build.gradle
@@ -46,6 +46,10 @@ dependencies {
     api "org.koin:koin-android:$koin"
     api "org.koin:koin-android-scope:$koin"
     api "org.koin:koin-android-viewmodel:$koin"
+
+    //image loading
+    api "com.github.bumptech.glide:glide:$glide"
+    kapt "com.github.bumptech.glide:compiler:$glide"
 }
 repositories {
     mavenCentral()
