Started working on GameDetails feature, basic setup is done, needs more UI work
Changed the way models are structured for Games list and GameDetails

More work done on the BaseViewModel setup, trying to prepare the App for persistable configuration changes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name="com.babic.filip.login.ui.LoginActivity"/>
         <activity android:name="com.babic.filip.register.ui.RegisterActivity"/>
         <activity android:name="com.babic.filip.main.ui.MainActivity"/>
+        <activity android:name="com.babic.filip.gamedetails.ui.GameDetailsActivity"/>
     </application>
 
 </manifest>
