--- a/gamedetails/build.gradle
+++ b/gamedetails/build.gradle
@@ -1,48 +1,33 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 28
+
     defaultConfig {
-        applicationId "com.filip.babic.coroutinesexpo"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    kapt {
-        generateStubs = true
-    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    //core modules
     implementation project(':core')
-    implementation project(':networking')
-
-    //feature-specific modules
-    implementation project(':splash')
-    implementation project(':login')
-    implementation project(':register')
     implementation project(':device')
-    implementation project(':main')
-    implementation project(':gamedetails')
-
-    //leaks
-    debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakCanary"
-    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leakCanary"
+    implementation project(':networking')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
 }
