Split up core module to core and coreui, moving all the Android-related stuff to coreui module. This way we can include only core stuff to things which do not require Android specific libs to run.
Changed the way routing is implemented, to use a single interface

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     //core modules
-    implementation project(':core')
+    implementation project(':coreui')
     implementation project(':networking')
 
     //feature-specific modules
