--- a/login/build.gradle
+++ b/login/build.gradle
@@ -25,7 +25,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation project(':core')
+    implementation project(':coreui')
     implementation project(':device')
     implementation project(':networking')
 
