Fixed a bug on Coroutines implementation which caused a crash when delaying the network calls.
Split up the main module into smaller modules which main depends on. Work still needed on MainNavigation, to make the main module and it's dependencies completely separate and decoupled

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':device', ':login', ':core', ':splash', ':register', ':networking', ':main', ':gamedetails', ':coreui'
+include ':app', ':device', ':login', ':core', ':splash', ':register', ':networking', ':main', ':gamedetails', ':coreui', ':toprated', ':myprofile', ':feed', ':messages', ':upcoming'
