Added the basic form of job-cancellation for Coroutines.
Fixed a few naming things in the project itself

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.filip.babic.coroutinesexpo"
+        applicationId "com.filip.babic.newgamesplus"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
