Minor work done on the Login Screen
Updated Kotlin coroutines, Koin and support library

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation project(':splash')
     implementation project(':login')
     implementation project(':register')
-    implementation project(':device')
+    implementation project(':preferences')
     implementation project(':main')
     implementation project(':gamedetails')
 
