--- a/networking/build.gradle
+++ b/networking/build.gradle
@@ -25,7 +25,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation project(':device')
+    implementation project(':preferences')
 
     //networking
     api "com.squareup.retrofit2:retrofit:$retrofit"
