--- a/gamedetails/build.gradle
+++ b/gamedetails/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation project(':coreui')
-    implementation project(':device')
+    implementation project(':preferences')
     implementation project(':networking')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
