--- a/build.gradle
+++ b/build.gradle
@@ -1,47 +1,52 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlinVersion = '1.2.71'
+    ext.kotlinVersion = '1.3.31'
 
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath 'com.android.tools.build:gradle:3.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
-
-    ext.supportLib = '28.0.0'
-    ext.constraintLayout = '1.1.2'
-    ext.architectureComponents = '1.1.1'
-    ext.dagger = '2.14.1'
-    ext.rxAndroid = '2.0.1'
-    ext.rxJava = '2.1.8'
-    ext.rxKotlin = '2.2.0'
-    ext.gson = '2.8.2'
-    ext.retrofit = '2.4.0'
-    ext.okHttp = "3.8.0"
-    ext.coroutines = "0.30.0"
-    ext.leakCanary = '1.5.4'
-    ext.room = '1.1.1'
-    ext.junit = '4.12'
-    ext.testRunner = '1.0.1'
-    ext.espresso = '3.0.1'
-    ext.mockito = '2.17.0'
-    ext.mockitoKotlin = "1.5.0"
-    ext.koin = "1.0.1"
-    ext.leakCanary = "1.5.4"
-    ext.glide = "4.7.1"
 }
 
 allprojects {
     repositories {
         google()
         jcenter()
+    }
+
+    project.ext {
+        compileSdkVersion = 29
+        targetSdkVersion = 29
+        minSdkVersion = 21
+        versionCode = 1
+        versionName = "1.0.0"
+
+        supportLib = '28.0.0'
+        constraintLayout = '1.1.2'
+        architectureComponents = '1.1.1'
+        dagger = '2.14.1'
+        ext.gson = '2.8.2'
+        retrofit = '2.4.0'
+        okHttp = "3.8.0"
+        coroutines = "1.3.0-M1"
+        leakCanary = '1.5.4'
+        room = '1.1.1'
+        junit = '4.12'
+        testRunner = '1.0.1'
+        espresso = '3.0.1'
+        mockito = '2.17.0'
+        mockitoKotlin = "1.5.0"
+        koin = "2.0.1"
+        leakCanary = "1.6.1"
+        glide = "4.7.1"
     }
 }
 
